<resources>
    <string name="app_name">星梦缘</string>
    <string name="label_star">星座</string>
    <string name="label_pairing">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_me">我的</string>
    <string name="man">男生:</string>
    <string name="woman">女生:</string>
    <string name="parnter_btn_prize">每日抽奖</string>
    <string name="parnter_btn_analysis">开始配对分析</string>
    <string name="parnter_info">分别先把您的星座和对方的星座,点击配对分析即可。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--我的页面-->
    <string name="about_app">关于应用</string>
    <string name="function">功能介绍</string>
    <string name="update">更新日志</string>
    <string name="problem">反馈问题</string>
</resources>