<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/lightpink"
             android:orientation="vertical"
             android:padding="20dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/parnter_man">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/man"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:id="@+id/parnterfrag_iv_man"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/parnterfrag_sp_man"/>


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/parnter_woman">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/woman"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:id="@+id/parnterfrag_iv_woman"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:id="@+id/parnterfrag_sp_woman"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/parnter_info"
            android:textSize="16sp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/parnter_btn_prize"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:textColor="@color/white"
            android:background="@drawable/dock"
            android:id="@+id/parnterfrag_prize"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/parnter_btn_analysis"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/dock"
            android:id="@+id/parnterfrag_analysis"/>
</LinearLayout>