<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <!--顶部标题,gravity布局居中还是向左向右,-->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/main_tv_title"
                android:text="星梦"
                android:background="@color/lightpink"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/darkyellow"
                />
        <!--底部按钮组,drawableTop调用写好的选择器-->
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/main_rg"
                android:orientation="horizontal"
                android:background="@color/darkyellow"
                android:layout_alignParentBottom="true"
                android:padding="5dp">
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/main_rb_star"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/main_rb_star"
                    android:text="@string/label_star"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@drawable/main_rbtext"
                    android:drawablePadding="2dp"
                    android:checked="true"/>
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/main_rb_pairing"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/main_rb_pairing"
                    android:text="@string/label_pairing"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@drawable/main_rbtext"
                    android:drawablePadding="2dp"
                    android:checked="false"/>
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/main_rb_luck"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/main_rb_luck"
                    android:text="@string/label_luck"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@drawable/main_rbtext"
                    android:drawablePadding="2dp"
                    android:checked="false"/>
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/main_rb_me"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/main_rb_me"
                    android:text="@string/label_me"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@drawable/main_rbtext"
                    android:drawablePadding="2dp"
                    android:checked="false"/>
        </RadioGroup>
<!--中间部分,orientation方向布局,layout_below在什么的底部,layout_above在那个元素的顶部-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main_layout_center"
                android:orientation="vertical"
                android:layout_below="@id/main_tv_title"
                android:layout_above="@id/main_rg"/>





































</RelativeLayout>