<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/purple">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/mefrag_me"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    app:civ_border_color="@color/darkgreen"
                    app:civ_border_width="2dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="白羊座"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:layout_marginBottom="50dp"
                    android:id="@+id/mefrag_tv_name"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <View
                android:layout_width="4dp"
                android:layout_height="30dp"
                android:background="@color/lightblue"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>
        <TextView
                android:id="@+id/mefrag_tv_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_app"
                android:textSize="20sp"
                android:gravity="center|left"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <View
                android:layout_width="4dp"
                android:layout_height="30dp"
                android:background="@color/lightblue"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>
        <TextView
                android:id="@+id/mefrag_tv_function"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/function"
                android:textSize="20sp"
                android:gravity="center|left"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <View
                android:layout_width="4dp"
                android:layout_height="30dp"
                android:background="@color/lightblue"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>
        <TextView
                android:id="@+id/mefrag_tv_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update"
                android:textSize="20sp"
                android:gravity="center|left"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <View
                android:layout_width="4dp"
                android:layout_height="30dp"
                android:background="@color/lightblue"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>
        <TextView
                android:id="@+id/mefrag_tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/problem"
                android:textSize="20sp"
                android:gravity="center|left"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>